# lore-os

./: Cargo.toml  README.md  x86_64-lore_os.json
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
